Update color reference: GN pink, Non-fiction bright blue

--- a/main.css
+++ b/main.css
@@ -713,8 +713,8 @@ a[href*="suggestion"] {
    - SciFi: #ffad05 - Gold
    - Fic: #82b1d4 - Carolina Blue
    - Mys: #fcff4b - Yellow
-   - GN: #982649 - Burgundy
-   - Non-fiction: #094074 - Deep Blue
+   - GN: #d43667 - Pink
+   - Non-fiction: #1372cc - Bright Blue
 */
 .CallNumber {
     font-weight: 700;
