--- a/main.css
+++ b/main.css
@@ -104,7 +104,6 @@ body::before {
     font-weight: 500;
     transition: all 0.3s ease;
     font-size: 1.5em;
-    text-transform: uppercase;
 }
 
 #header-region .nav-link:hover,
@@ -218,6 +217,7 @@ a:visited {
 .btn-primary .fa,
 .btn-primary [class^="fa-"],
 #scrolltocontent i,
+.fa.fa-icon-black,
 .btn-danger i,
 .btn-danger .fa {
     color: #e1e7f1 !important;
